--- a/djangoproject/ecommerse/static/css/carrito.css
+++ b/djangoproject/ecommerse/static/css/carrito.css
@@ -71,16 +71,16 @@ img:hover {
     width: 100%;
     height: 45px;
     line-height: 45px;
-    color: #fff;
+    color: #ece6e6;/*titulo del frente de la tarjeta*/
     background: rgb(0,0,0,.4);
     text-align: center;
 }
 
 .card .back {
     transform: perspective(600px) rotateY(180deg);
-    background: rgb(187, 219, 238);
+    background: rgb(5, 5, 6);
     padding: 15px;
-    color: #0e0101;
+    color: #faf9f9;/*Color de las ketras del back*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -89,13 +89,13 @@ img:hover {
 }
 
 .card .back .link{
-    border-top: solid 1px #110202;
+    border-top: solid 1px #f7f4f4;
     height: 50px;
     line-height: 50px;
 }
 
 .card .back .link a {
-    color: #090101;
+    color: #ede6e6;
 }
 
 .card .back h3 {
