--- a/djangoproject/ecommerse/templates/home.html
+++ b/djangoproject/ecommerse/templates/home.html
@@ -170,6 +170,7 @@
 </div>
 -->    
 <!--__________________________________Carrusel _______________________-->
+<h5>Nuestros productos</h5>
     <div class="container" id="carrusel_css">
         <div class="carousel">
             <h2></h2>
