actualiazando el error

--- a/djangoproject/ecommerse/templates/carrito.html
+++ b/djangoproject/ecommerse/templates/carrito.html
@@ -158,7 +158,7 @@
             </div>
         </div>
 <!--___________________Segunda tarjeta(giratoria)solo de prueba, se puede quitar_____________________-->
-        <div class="container">
+        <!--<div class="container">
             {% for producto in productos %}
             <div class="card">
                 <div class="face front">
@@ -177,7 +177,7 @@
             </div>
             {% endfor %}
         </div>
-    </div>
+    </div>-->
     <!--___________________________ Footer _______________________________-->
 <footer class="bg-light text-dark pt-5 pb-4">
     <div class="container text-center text-md-start">
