--- a/djangoproject/ecommerse/templates/carritoReal.html
+++ b/djangoproject/ecommerse/templates/carritoReal.html
@@ -17,9 +17,9 @@
             {% for key, value in request.session.carrito.items %}
             <tr>
                 <td>{{value.nombre}}</td>
-                {% for producto in productos %}
-                <td>C/U: {{producto.precio}} Acumulado: {{value.acumulado}}</td>
-                {% endfor %}
+                
+                <td> Acumulado: {{value.acumulado}}</td>
+                
                 <td>
                     <a href="{% url 'Add' value.producto_id %}" class="badge btn btn-dark badge-dark">+</a>
                     {{value.cantidad}}
