boton guardar preliminar

--- a/djangoproject/ecommerse/templates/carrito.html
+++ b/djangoproject/ecommerse/templates/carrito.html
@@ -26,10 +26,9 @@
                             <input class="form-control me-2 tamano_bus" type="search" placeholder="" aria-label="Search">
                             <button class="btn btn-outline-light" type="submit">Buscar</button>
                             <button onclick="changeColor(body)" class="btn btn-outline-light" type="submit">Modo Oscuro</button>
-                            <button onclick="changeColor(body)" class="btn btn-outline-light" type="submit">Modo Oscuro</button>
                         </form>
                     </div>
-                    <a href="">
+                    <a href="{% url 'carrito' %}">
                         <img src="{% static 'imagenes/carrito_white.png'%}" alt="" class="logo">
                     </a>
                     <div class="dropdown"></div>
@@ -58,9 +57,6 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="{% static 'templates/inicio_sesion.html'%}" class="ancho_nav">
-                    <img src="{% static 'imagenes/Logo_usuario_cuenta.jpeg'%}" class="logo">
-                    </a>
                 </div>
             </div>
         </nav>
