--- a/djangoproject/ecommerse/templates/home.html
+++ b/djangoproject/ecommerse/templates/home.html
@@ -29,7 +29,7 @@
                         <button onclick="changeColor(body)" class="btn btn-outline-light" type="submit">Modo Oscuro</button>
                     </form>
                 </div>
-                <a href="">
+                <a href="{% url 'carrito' %}">
                     <img src="{% static 'imagenes/carrito_white.png'%}" alt="" class="logo">
                 </a>
                 <div class="dropdown"></div>
