Agregando mejoras al dashboard_graficos

--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/dashboard_graficos.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/dashboard_graficos.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/grafico_dashboard.css' %}">
 </head>
 <body style="background-color: #f8f9fa;">
-
+<!-- mejorando pagina del dashboard -->
     <!-- Barra de Bienvenida -->
     <div class="barra-arcoiris text-center">
         <h2 class="texto-arcoiris">¡Bienvenido a Nuestra Tienda!</h2>
     </div>
-
+<!-- mejorando pagina del dashboard -->
     <!-- Navbar principal -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
@@ -199,3 +199,7 @@
     </script>
 </body>
 </html>
+
+
+<!-- mejorando pagina del dashboard -->
+
