--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/editar_producto.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/editar_producto.html
@@ -70,7 +70,8 @@
             </div>
         </div>
     </nav>
-   
+
+    <!-- mostrar mensaje de alertas -->
     {% if messages %}
     <div class="alert-container">
         {% for message in messages %}
@@ -81,8 +82,6 @@
     </div>
     {% endif %}
  
-   
-
     {% block content %}
     <div class="dashboard-container">
         <h1 class="dashboard-title">Editar Producto</h1>
@@ -122,4 +121,5 @@
         </div>
     </div>
     {% endblock %}
-    
+     <!---->
+  <!---->
