--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/home.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/home.html
@@ -169,7 +169,7 @@
                 {% for producto in productos_1 %}
                 <div class="carrusel">
                     <div>
-                        <a href="{% url 'carritoid' producto.id %}">
+                        <a href="{% url 'detalle_producto' producto.id %}">
                             <h4><small>{{ producto.nombre }}</small> ${{ producto.precio }}</h4>
                             <picture>
                                 <img src="{% static 'imagenes/' %}{{ producto.imagen }}" alt="{{ producto.nombre }}">
