--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/carrito.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/carrito.html
@@ -11,6 +11,15 @@
     <link rel="icon" type="image/png" href="{% static 'imagenes/' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/carrito.css'%}">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-449T3X34HB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-449T3X34HB');
+</script>
 <body>
     <script src="{% static 'js/carrito.js' %}"></script>
 
