--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/registration/password_reset_complete.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/registration/password_reset_complete.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-449T3X34HB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-449T3X34HB');
+</script>
     <h2>Contraseña restablecida</h2>
 <p>Tu contraseña ha sido restablecida con éxito. Ahora puedes <a href="{% url 'inicio_sesion' %}">iniciar sesión</a>.</p>
 
