--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/home.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/home.html
@@ -72,20 +72,20 @@
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                         <li>
                             <a class="dropdown-item" href="{% url 'inicio_sesion' %}">
-                                <img src="{% static 'imagenes/iniciar_sesion_icono.png' %}" alt="Iniciar sesión" style="width: 20px; margin-right: 8px;">
+                                <!-- <img src="{% static 'imagenes/iniciar_sesion_icono.png' %}" alt="Iniciar sesión" style="width: 20px; margin-right: 8px;"> -->
                                 Iniciar Sesión
                             </a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="{% url 'registro' %}">
-                                <img src="{% static 'imagenes/registrarse_icono.png' %}" alt="Registrarse" style="width: 20px; margin-right: 8px;">
+                                <!-- <img src="{% static 'imagenes/registrarse_icono.png' %}" alt="Registrarse" style="width: 20px; margin-right: 8px;"> -->
                                 Registrarse
                             </a>
                         </li>
                         <li><hr class="dropdown-divider"></li>
                         <li>
                             <a class="dropdown-item" href="{% url 'cerrar_sesion' %}">
-                                <img src="{% static 'imagenes/cerrar_sesion_icono.png' %}" alt="Cerrar sesión" style="width: 20px; margin-right: 8px;">
+                                <!-- <img src="{% static 'imagenes/cerrar_sesion_icono.png' %}" alt="Cerrar sesión" style="width: 20px; margin-right: 8px;"> -->
                                 Cerrar Sesión
                             </a>
                         </li>
