--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/inicio_sesion.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/inicio_sesion.html
@@ -47,22 +47,29 @@
       </nav>
 
       <!-- Card inicio de cuenta-->
-        <div class="card mb-3 top" style="width: 30%;">
-          <div class="margen">
-                <form method="post">
-                  <div class="form-floating mb-3">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-                    <p>¿A olvidado su contraseña? <a href="{% url 'password_reset'%}">¡Recuperela!</a></p>
-                    <p>¿No esta registrado? <a href="{% url 'registro'%}">¡Registrate!</a></p>
-                  </div>
-                </form>
-                <div class="mb-3">
-                  <img src="{% static 'imagenes/saludo.jpg'%}" alt="" style="width: 100%;">
+      <div class="card mb-3 top" style="width: 30%;">
+        <div class="margen">
+            {% if messages %}
+                <div>
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
                 </div>
+            {% endif %}
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+                <p>¿A olvidado su contraseña? <a href="{% url 'password_reset' %}">¡Recupérala!</a></p>
+                <p>¿No está registrado? <a href="{% url 'registro' %}">¡Regístrate!</a></p>
+            </form>
+            <div class="mb-3">
+                <img src="{% static 'imagenes/saludo.jpg' %}" alt="" style="width: 100%;">
             </div>
         </div>
+    </div>
 
       <!--Scripts-->
 
